# stash-plugins

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: python-checks.yml
plugins/compress-performer-covers/: README.md  avif_codec.py  compress-performer-covers.yml  main.py  stash_api.py
plugins/eht-updater/: README.md  constants.py  ehentai_api.py  eht-updater.yml  main.py  plugin_runtime.py  stash_api.py  sync_logic.py
plugins/extended-attributes/: extended-attributes.yml  main.py  plugin_runtime.py  stash_api.py
plugins/placeholder/: placeholder.py  placeholder.yml
src/stash_tools/: cli.py  dev.py
